tests/errors/semantics/circular_dep_func.odl
main :: () -> void {
    T :: () -> int;

    A :: () -> T {
        return B;
    };

    B :: () -> int {
        return @run A()();
    };

    0;
};